enable coloured boxes for sidebar left & fix spacing

--- a/assets/source/sass/components/navigation/_sidebar-menu.scss
+++ b/assets/source/sass/components/navigation/_sidebar-menu.scss
@@ -8,6 +8,8 @@ ul.nav-aside {
     li {
         border-color: $border-color;
     }
+
+    margin-bottom: 30px;
 }
 
 .nav-aside .sub-menu, .nav-aside .children, .nav-mobile .sub-menu, .nav-mobile .children {
