--- a/assets/source/sass/layout/_sidebar.scss
+++ b/assets/source/sass/layout/_sidebar.scss
@@ -4,5 +4,5 @@
     }
 }
 .sidebar-left-sidebar ul.nav-aside {
-    margin-right: 15px;
+
 }
